--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,15 @@
 [package]
 name = "serde_taml"
-version = "0.0.0-dev"
+version = "0.0.1"
 authors = ["Tamme Schichler <tamme@schichler.dev>"]
 edition = "2018"
+description = "Serde-integration for TAML, a kind-to-humans configuration language"
+license = "MPL-2.0"
+repository = "https://github.com/Tamschi/serde_taml"
+include = [
+	"**/*.rs",
+	"Cargo.toml",
+]
 publish = false
 
 [dependencies]
@@ -11,9 +18,9 @@ lazy_static = { version = "1.4.0", optional = true }
 linkme = { version = "0.2.2", optional = true }
 logos = "0.11.4"
 serde = { version = "1.0.115", default-features = false }
-serde-object = { path = "../serde-object", optional = true }
-taml = { path = "../taml" }
-woc = { path = "../woc" }
+serde-object = { version = "0.0.0-alpha.0", optional = true }
+taml = "0.0.1"
+cervine = "0.0.2"
 wyz = "0.2.0"
 
 [dev-dependencies]
