--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,15 +4,36 @@ version = "0.0.1"
 authors = ["Tamme Schichler <tamme@schichler.dev>"]
 edition = "2018"
 description = "Serde-integration for TAML, a kind-to-humans configuration language"
-license = "MPL-2.0"
+license = "MIT OR Apache-2.0"
 repository = "https://github.com/Tamschi/serde_taml"
+homepage = "https://github.com/Tamschi/serde_taml/tree/v0.0.1"
+documentation = "https://docs.rs/serde_taml/0.0.1"
+keywords = [] #TODO
+categories = [] #TODO
+readme = "README.md"
 include = [
 	"**/*.rs",
+	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
 	"Cargo.toml",
+	"CHANGELOG.md",
+	"CODE_OF_CONDUCT.md",
+	"LICENSE-*",
+	"README.md",
+	"SECURITY.md",
 ]
+resolver = "2"
 publish = false
 
+[badges]
+is-it-maintained-issue-resolution = { repository = "Tamschi/serde_taml" }
+is-it-maintained-open-issues = { repository = "Tamschi/serde_taml" }
+maintenance = { status = "experimental" } # This may differ between branches.
+
+[features]
+serde-object-assist = ["lazy_static", "linkme", "serde-object/assistant-extra"] #TODO: Document this.
+
 [dependencies]
+cervine = "0.0.2"
 indexmap = "1.5.1"
 lazy_static = { version = "1.4.0", optional = true }
 linkme = { version = "0.2.2", optional = true }
@@ -20,15 +41,17 @@ logos = "0.11.4"
 serde = { version = "1.0.115", default-features = false }
 serde-object = { version = "0.0.0-alpha.0", optional = true }
 taml = "0.0.1"
-cervine = "0.0.2"
 wyz = "0.2.0"
 
 [dev-dependencies]
+cargo-husky = "1.5.0"
 cast = "0.2.3"
 codemap = "0.1.3"
 codemap-diagnostic = "0.1.1"
+doc-comment = "0.3.3"
 educe = "0.4.13"
+git_info = "0.1.2"
 indexmap = { version = "1.5.1", features = ["serde-1"] }
-
-[features]
-serde-object-assist = ["lazy_static", "linkme", "serde-object/assistant-extra"]
+serde = { version = "1.0.115", features = ["derive"] }
+version-sync = "0.9.1"
+wasm-bindgen-test = "0.3.24"
