--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ indexmap = "1.5.1"
 lazy_static = { version = "1.4.0", optional = true }
 linkme = { version = "0.2.2", optional = true }
 logos = "0.12.0"
+paste = "1.0.5"
 serde = { version = "1.0.115", default-features = false }
 serde-object = { version = "0.0.0-alpha.0", optional = true }
 taml = "0.0.4"
