--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ serde-object-assist = ["lazy_static", "linkme", "serde-object/assistant-extra"] 
 
 [dependencies]
 cervine = "0.0.6"
+either = "1.6.1"
 indexmap = "1.5.1"
 lazy_static = { version = "1.4.0", optional = true }
 linkme = { version = "0.2.2", optional = true }
@@ -41,7 +42,7 @@ logos = "0.12.0"
 paste = "1.0.5"
 serde = { version = "1.0.115", default-features = false }
 serde-object = { version = "0.0.0-alpha.0", optional = true }
-taml = "0.0.4"
+taml = "0.0.5"
 tap = "1.0.1"
 
 [dev-dependencies]
