--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,8 +42,8 @@ linkme = { version = "0.2.2", optional = true }
 logos = "0.12.0"
 paste = "1.0.5"
 serde = { version = "1.0.115", default-features = false }
-serde-object = { version = "0.0.0-alpha.0", optional = true }
-taml = "0.0.5"
+serde-object = { version = "0.0.0-alpha.0", optional = true } # public
+taml = "0.0.5" # public
 tap = "1.0.1"
 try_match = "0.2.2"
 
