--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ logos = "0.12.0"
 paste = "1.0.5"
 serde = { version = "1.0.115", default-features = false }
 serde-object = { version = "0.0.0-alpha.0", optional = true } # public
-taml = "0.0.6" # public
+taml = "0.0.8" # public
 tap = "1.0.1"
 try_match = "0.2.2"
 
@@ -58,5 +58,6 @@ educe = "0.4.13"
 git_info = "0.1.2"
 indexmap = { version = "1.5.1", features = ["serde-1"] }
 serde = { version = "1.0.115", features = ["derive"] }
+serde_bytes = "0.11.5"
 version-sync = "0.9.1"
 wasm-bindgen-test = "0.3.24"
