--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ lazy_static = { version = "1.4.0", optional = true }
 linkme = { version = "0.2.2", optional = true }
 logos = "0.12.0"
 paste = "1.0.5"
+scientific = { version = "0.1.2", features = ["serde"] }
 serde = { version = "1.0.115" }
 serde-object = { version = "0.0.0-alpha.0", optional = true } # public
 taml = "0.0.9" # public
