Updated rust-template 10 -> 21

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,15 +5,22 @@ updates:
     schedule:
       interval: "daily"
     # versioning-strategy: "increase-if-necessary" # Not yet supported. See <https://github.com/dependabot/dependabot-core/issues/4009>.
+    # For now, use the following to reduce spam:
+    ignore:
+      - dependency-name: "*"
+        update-types: ["version-update:semver-minor", "version-update:semver-patch"]
     assignees:
       - "Tamschi"
-    reviewers:
-      - "Tamschi"
+    labels:
+      - "type: upkeep"
+      - "domain: Rust"
+
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "daily"
     assignees:
       - "Tamschi"
-    reviewers:
-      - "Tamschi"
+    labels:
+      - "type: upkeep"
+      - "domain: GitHub Actions"
